fixed spacing

--- a/src/assets/intro.css
+++ b/src/assets/intro.css
@@ -41,8 +41,8 @@
 }
 
 .image-container {
-  margin-left: 45%;
-  margin-top: 3%;
+  margin-left: 47%;
+  margin-top: 2.5%;
   /* position: absolute; */
 }
 
